[gd_scene load_steps=22 format=3 uid="uid://gtmdljwugqnm"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_bj8u5"]
[ext_resource type="AudioStream" uid="uid://xwaxk1t01sux" path="res://assets/audio/hit.ogg" id="2_4pu2i"]
[ext_resource type="Texture2D" uid="uid://d3i8jn4j5wue4" path="res://assets/sprites/eye.png" id="2_gpesa"]
[ext_resource type="Texture2D" uid="uid://bl025lgwh5tsf" path="res://assets/sprites/pupil.png" id="3_oubem"]
[ext_resource type="Script" path="res://scripts/pupil.gd" id="4_biwl2"]
[ext_resource type="Texture2D" uid="uid://5r66qil7of3y" path="res://assets/sprites/nose.png" id="5_0rxlg"]
[ext_resource type="PackedScene" uid="uid://cca0ue76ednpv" path="res://scenes/yarn.tscn" id="6_dqmjs"]
[ext_resource type="Texture2D" uid="uid://c5tgl0kb0gl0i" path="res://assets/sprites/paw.png" id="7_fqsaw"]
[ext_resource type="Texture2D" uid="uid://bhujfld6k6bgw" path="res://assets/sprites/ear.png" id="8_tonbn"]
[ext_resource type="Texture2D" uid="uid://bptftletnq26u" path="res://assets/sprites/foot.png" id="9_80roh"]
[ext_resource type="AudioStream" uid="uid://0anahopy7ktj" path="res://assets/audio/cat_purrsleepy_loop.wav" id="10_wjpvb"]
[ext_resource type="Theme" path="res://assets/theme.tres" id="11_wrk25"]
[ext_resource type="Script" path="res://scripts/yarn_spawner.gd" id="12_y41bc"]
[ext_resource type="Texture2D" uid="uid://cvyyw26of20ju" path="res://assets/sprites/restart.png" id="14_nk03o"]
[ext_resource type="AudioStream" uid="uid://b6c06hwpxnmgs" path="res://assets/audio/meow.wav" id="15_qkrqa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7oa0"]
size = Vector2(522.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu1ji"]
size = Vector2(808, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pewp5"]
size = Vector2(831.5, 20)

[sub_resource type="Animation" id="Animation_xvpfu"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointsLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelScore:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qqslt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointsLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelScore:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ko5nx"]
_data = {
"RESET": SubResource("Animation_qqslt"),
"end": SubResource("Animation_xvpfu")
}

[node name="Node2D" type="Node2D"]
process_mode = 3
script = ExtResource("1_bj8u5")

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4pu2i")
volume_db = -27.239
pitch_scale = 0.76

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -1.0
offset_right = 504.0
offset_bottom = 803.0

[node name="Boundry" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Boundry"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D"]
position = Vector2(251.75, -9)
shape = SubResource("RectangleShape2D_b7oa0")

[node name="StaticBody2D2" type="StaticBody2D" parent="Boundry"]
position = Vector2(0, 648)

[node name="StaticBody2D3" type="StaticBody2D" parent="Boundry"]
position = Vector2(0, 648)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D3"]
position = Vector2(245, -11)
rotation = -3.14668
shape = SubResource("RectangleShape2D_wu1ji")
one_way_collision = true

[node name="StaticBody2D4" type="StaticBody2D" parent="Boundry"]
position = Vector2(1164, 677)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D4"]
position = Vector2(286.75, -657)
rotation = 6.28318
shape = SubResource("RectangleShape2D_pewp5")
one_way_collision = true

[node name="Eye" type="Sprite2D" parent="."]
position = Vector2(130.872, 161.728)
scale = Vector2(0.777, 0.777)
texture = ExtResource("2_gpesa")

[node name="Eye2" type="Sprite2D" parent="."]
position = Vector2(366.872, 168.728)
scale = Vector2(0.777, 0.777)
texture = ExtResource("2_gpesa")
flip_h = true

[node name="Pupil" type="Sprite2D" parent="."]
position = Vector2(158.372, 170.728)
scale = Vector2(0.777, 0.777)
texture = ExtResource("3_oubem")
script = ExtResource("4_biwl2")

[node name="Pupil2" type="Sprite2D" parent="."]
position = Vector2(342.872, 180.728)
scale = Vector2(0.777, 0.777)
texture = ExtResource("3_oubem")
script = ExtResource("4_biwl2")

[node name="Nose" type="Sprite2D" parent="."]
position = Vector2(254, 271)
scale = Vector2(0.654, 0.654)
texture = ExtResource("5_0rxlg")

[node name="Yarn" parent="." instance=ExtResource("6_dqmjs")]

[node name="LeftPaw" type="Sprite2D" parent="."]
position = Vector2(79, 352)
scale = Vector2(0.678, 0.678)
texture = ExtResource("7_fqsaw")

[node name="RightPaw" type="Sprite2D" parent="."]
position = Vector2(417, 350)
scale = Vector2(0.678, 0.678)
texture = ExtResource("7_fqsaw")

[node name="Ear" type="Sprite2D" parent="."]
position = Vector2(420, 19)
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_tonbn")
flip_h = true

[node name="Ear2" type="Sprite2D" parent="."]
position = Vector2(83, 20)
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_tonbn")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="LeftFoot" type="Sprite2D" parent="."]
position = Vector2(64, 730)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_80roh")
offset = Vector2(-2.85714, 77.1429)

[node name="RightFoot" type="Sprite2D" parent="."]
position = Vector2(408, 730)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_80roh")
offset = Vector2(2.85712, 80)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_wjpvb")
volume_db = -30.953
autoplay = true

[node name="PointsLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_right = 504.0
offset_bottom = 45.0001
grow_horizontal = 2
theme = ExtResource("11_wrk25")
text = "0"
horizontal_alignment = 1

[node name="YarnSpawner" type="Node2D" parent="."]
position = Vector2(-116, 488)
rotation = 0.545785
script = ExtResource("12_y41bc")

[node name="ClickLabel" type="RichTextLabel" parent="."]
offset_left = 112.0
offset_top = 456.0
offset_right = 376.0
offset_bottom = 496.0
theme = ExtResource("11_wrk25")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center][wave]click to start[/wave][/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ko5nx")
}

[node name="LabelScore" type="Label" parent="."]
visible = false
offset_top = 456.0
offset_right = 496.0
offset_bottom = 501.0
theme = ExtResource("11_wrk25")
text = "Score"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
offset_left = 216.0
offset_top = 360.0
offset_right = 336.0
offset_bottom = 480.0
scale = Vector2(0.59332, 0.59332)
texture_normal = ExtResource("14_nk03o")

[node name="Meow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_qkrqa")
pitch_scale = 2.13

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
